@@ -465,6 +465,45 @@ int mszipd_decompress(struct mszipd_stream *zip, off_t out_bytes) {
   return MSPACK_ERR_OK;
 }
 
+int mszipd_decompress_kwaj(struct mszipd_stream *zip) {
+    /* for the bit buffer */
+    register unsigned int bit_buffer;
+    register int bits_left;
+    unsigned char *i_ptr, *i_end;
+
+    int i, error, block_len;
+
+    /* unpack blocks until block_len == 0 */
+    for (;;) {
+	RESTORE_BITS;
+
+	/* align to bytestream, read block_len */
+	i = bits_left & 7; REMOVE_BITS(i);
+	READ_BITS(block_len, 8);
+	READ_BITS(i, 8); block_len |= i << 8;
+
+	if (block_len == 0) break;
+
+	/* read "CK" header */
+	READ_BITS(i, 8); if (i != 'C') return MSPACK_ERR_DATAFORMAT;
+	READ_BITS(i, 8); if (i != 'K') return MSPACK_ERR_DATAFORMAT;
+
+	/* inflate block */
+	zip->window_posn = 0;
+	zip->bytes_output = 0;
+	STORE_BITS;
+	if ((error = inflate(zip))) {
+	    D(("inflate error %d", error))
+	    return zip->error = (error > 0) ? error : MSPACK_ERR_DECRUNCH;
+	}
+
+	/* write inflated block */
+	if (zip->sys->write(zip->output, &zip->window[0], zip->bytes_output)
+	    != zip->bytes_output) return zip->error = MSPACK_ERR_WRITE;
+    }
+    return MSPACK_ERR_OK;
+}
+
 void mszipd_free(struct mszipd_stream *zip) {
   struct mspack_system *sys;
   if (zip) {
